--- a/2-markdown.Rmd
+++ b/2-markdown.Rmd
@@ -85,7 +85,7 @@ gg_s =
 
 library(patchwork)
 
-gg_n + gg_s
+gg_s + gg_n
 
 ```
 
@@ -192,6 +192,7 @@ gg_ret_s =
   scale_y_continuous(sec.axis = sec_axis(~.*5, 
                                          name = expression(bold("cumulative retention, kg ha"^{-1}))))+
   ylab(expression(bold("S, kg ha"^{-1}*"yr"^{-1})))+
+  xlab("")+
   geom_vline(xintercept = 1989.5, linetype="dashed")+
   geom_vline(xintercept = 2016.5, linetype="dashed")+
   geom_hline(yintercept = 0)+
